--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>
-        star bucks
+        Kopi Luwak
     </title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -53,35 +53,37 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Star Bucks</a>
+                <a class="navbar-brand" href="#" style="color:black; background-color:#4caf50;">Kopi Luwak</a>
             </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+            <ul>
+                <li><a href="#">Home</a></li>
                 <li><a href="order online.html">Order online</a></li>
-                <li><a href="contact us.html">Contact us</a></li>
+                <li><a href="contact us.php">Contact us</a></li>
                 <li> <a href="locate.html">Locate us</a></li>
+                <li style="float:right"><a>Sign in</a></li>
+                <li style="float:right"> <a>Join now</a></li>
             </ul>
         </div>
     </nav>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="img\logo.png" class="img-responsive logo" alt="sorry" id="1" />
+                <img src="img\source.gif" class="img-responsive logo" alt="sorry" id="1" />
             </div>
             <div class="col-md-6   text-uppercase">
-                <h1>Star Bucks</h1>
+                <h1>Kopi Luwak</h1>
                 <h4>Coffee</h4>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
                 <br>
-                <img class="img-responsive coffeeimage" src="img\coffee-shop.jpg" >
+                <img class="imgresponsivecoffeeimage" src="img\Home_PAGE.jpg">
                 <br>
             </div>
 
             <div class="col-md-6" >
-            <p>Every day, we go to work hoping to do two things: share great coffee with our friends and help make the world a little better. It was true when the first Starbucks opened in 1971, and it’s just as true today. Back then, the company was a single store in Seattle’s historic Pike Place Market. From just a narrow storefront, Starbucks offered some of the world’s finest fresh-roasted whole bean coffees. The name, inspired by Moby Dick, evoked the romance of the high seas and the seafaring tradition of the early coffee traders. In 1981, Howard Schultz (Starbucks chairman and chief executive officer) had first walked into a Starbucks store. From his first cup of Sumatra, Howard was drawn into Starbucks and joined a year later. In 1983, Howard traveled to Italy and became captivated with Italian coffee bars and the romance of the coffee experience. He had a vision to bring the Italian coffeehouse tradition back to the United States. A place for conversation and a sense of community. A third place between work and home. He left Starbucks for a short period of time to start his own Il Giornale coffeehouses and returned in August 1987 to purchase Starbucks with the help of local investors. From the beginning, Starbucks set out to be a different kind of company. One that not only celebrated coffee and the rich tradition, but that also brought a feeling of connection. Our mission to inspire and nurture the human spirit – one person, one cup, and one neighborhood at a time.</p>
+                <p>Kopi luwak is brewed from coffee beans that transversed the gastrointestinal tract of an Asian palm civet, and were thus subjected to a combination of acidic, enzymatic and fermentation treatment. During digestion, digestive enzymes and gastric juices permeate through the endocarp of coffee cherries and break down storage proteins, yielding shorter peptides. This alters the composition of amino acids and impacts the aroma of the coffee. In the roasting process, the proteins undergo a non-enzymatic Maillard reaction.The palm civet is thought to select the most ripe and flawless coffee cherries. This selection influences the flavour of the coffee, as does the digestive process. The beans begin to germinate by malting, which reduces their bitterness.</p>
         </div>
 
     </div>
@@ -130,18 +132,7 @@
 
     </div>
     <br>
-    <div class="row">
-        <div class="col-md-12">
-            <h2> Vedio Gallery </h2>
-        </div>
-    </div>
-    <iframe width="250" height="250" src="https://www.youtube.com/embed/hPbrlNsMTg4" frameborder="0" allowfullscreen></iframe>&nbsp;&nbsp;&nbsp;
-    <iframe width="250" height="250" src="https://www.youtube.com/embed/NDpwC5Obhi4" frameborder="0" allowfullscreen></iframe>&nbsp;&nbsp;&nbsp;
-    <iframe width="250" height="250" src="https://www.youtube.com/embed/S9NCFKlVo20" frameborder="0" allowfullscreen></iframe>&nbsp;&nbsp;&nbsp;
-    <iframe width="250" height="250" src="https://www.youtube.com/embed/aC-q0n2WcPc" frameborder="0" allowfullscreen></iframe>
-
-    </div>
-
+    
 </body>
 
 </html>
