--- a/locate.html
+++ b/locate.html
@@ -8,6 +8,7 @@
        <link rel="icon" href="img\logo.png" height="20%"/>
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <meta charset="utf-8">
+       <link rel="stylesheet" href="css\style.css" />
        <style>
        h1
        {
@@ -32,22 +33,24 @@
 </head>
 <body>
   <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Star Bucks</a>
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" style="color:black; background-color:#4caf50;" href="#">Kopi Luwak</a>
+      </div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="order online.html">Order online</a></li>
+        <li><a href="contact us.php">Contact us</a></li>
+        <li><a href="#">Locate us</a></li>
+        <li style="float:right"><a>Sign in</a></li>
+        <li style="float:right"> <a>Join now</a></li>
+      </ul>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a href="index.html">Home</a></li>
-      <li class="order online.html"><a href="order online.html">Order online</a></li>
-      <li><a href="contact us.html">Contact us</a></li>
-      <li class="active" > <a href="locate.html">Locate us</a></li>
-    </ul>
-  </div>
-</nav>
+  </nav>
 <div class="container">
   <div class="row">
     <div class="col-md-2">
-    <a href="index.html"><img src="img\logo.png" class="img-responsive" alt="sorry" /></a>
+    <a href="index.html"><img src="img\source.gif" class="img-responsive logo" alt="sorry" id="1" /></a>
     </div>
     <div class="col-md-5">
       <h1 >Find Your Near By Store </h1>
