--- a/order online.html
+++ b/order online.html
@@ -15,23 +15,25 @@
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Star Bucks</a>
+      <a class="navbar-brand" style="color:black; background-color:#4caf50;" href="#">Kopi Luwak</a>
     </div>
-    <ul class="nav navbar-nav">
+    <ul>
       <li><a href="index.html">Home</a></li>
-      <li class="active"><a href="order online.html">Order online</a></li>
-      <li><a href="contact us.html">Contact us</a></li>
+      <li><a href="order online.html">Order online</a></li>
+      <li><a href="contact us.php">Contact us</a></li>
       <li> <a href="locate.html">Locate us</a></li>
+      <li style="float:right"><a>Sign in</a></li>
+      <li style="float:right"> <a>Join now</a></li>
     </ul>
   </div>
 </nav>
 <div class="container abc1">
   <div class="row">
     <div class="col-md-3">
-    <a href="index.html"><img src="img\logo.png" class="img-responsive" alt="sorry" style="height:20%" /></a>
+    <a href="index.html"><img src="img\source.gif" class="img-responsive" alt="sorry" style="height:20%" /></a>
     </div>
     <div class="col-md-5">
-      <h1 style="padding-top:30px"> Welcome To Star Bucks </h1>
+      <h1 style="padding-top:30px"> Welcome To Kopi Luwak </h1>
     </div>
   </div>
 
