COMMIT SPECAIL Signed-off-by: ROHAN DESHMUKH <rohanshivajirao.deshmukh@sjsu.edu>

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <body>
     <div class="se-pre-con"></div>
     <!-- Ends -->
+	<!-- START-->
 
     <nav class="navbar navbar-default">
         <div class="container-fluid">
