Sign In Page Details || By Rohan Deshmukh Signed-off-by: ROHAN DESHMUKH <rohanshivajirao.deshmukh@sjsu.edu>

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li><a href="order online.html">Order online</a></li>
                 <li><a href="contact us.php">Contact us</a></li>
                 <li> <a href="locate.html">Locate us</a></li>
-                <li style="float:right"><a>Sign in</a></li>
+                <li style="float:right"><a href="SignIn.html">Sign in</a></li>
                 <li style="float:right"> <a>Join now</a></li>
             </ul>
         </div>
