--- a/locate.html
+++ b/locate.html
@@ -42,7 +42,7 @@
         <li><a href="order online.html">Order online</a></li>
         <li><a href="contact us.php">Contact us</a></li>
         <li><a href="#">Locate us</a></li>
-        <li style="float:right"><a>Sign in</a></li>
+        <li style="float:right"><a href="SignIn.html">Sign in</a></li>
         <li style="float:right"> <a>Join now</a></li>
       </ul>
     </div>
